--- a/document-types/promotional.html
+++ b/document-types/promotional.html
@@ -382,7 +382,7 @@
 <li><a href="https://www.gov.uk/government/publications/covid-19-vaccination-guide-for-older-adults">COVID-19 vaccination: guide for adults</a></li>
 <li><a href="https://www.gov.uk/government/publications/covid-19-vaccination-why-you-are-being-asked-to-wait">COVID-19 vaccination: why you are being asked to wait</a></li>
 <li><a href="https://www.gov.uk/government/publications/vaccine-update-issue-318-march-2021">Vaccine update: issue 318, March 2021</a></li>
-<li><a href="https://www.gov.uk/government/publications/staying-covid-19-secure-in-2020-notice">Staying COVID-19 Secure notice</a></li>
+<li><a href="https://www.gov.uk/government/publications/staying-covid-19-secure-in-2020-notice">Staying COVID-secure notice</a></li>
 <li><a href="https://www.gov.uk/government/publications/vaccine-update-issue-316-january-2021-covid-19-special-edition">Vaccine update: issue 316, January 2021, COVID-19 special edition</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=promotional&amp;count=10">Source query from Search API</a></p>
