--- a/document-types/consultation.html
+++ b/document-types/consultation.html
@@ -333,7 +333,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: consultation</h1>
 
-  <p>There are <strong>1</strong> pages with document type
+  <p>There are <strong>0</strong> pages with document type
 &lsquo;consultation&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is not rendered by any apps. This could mean that the document
 type is not meant to be rendered (a redirect for example), or that there aren&rsquo;t
@@ -369,12 +369,7 @@ actually any pages with this document type.</p>
 <td>other</td>
 </tr>
         </table>
-      </div><h2 id='example-pages'>Example pages</h2>
-<ul>
-<li><a href="https://www.gov.uk/government/consultations/uk-smi-q-2-qa-in-the-diagnostic-virology-and-serology-laboratory">UK SMI Q 2: QA in the diagnostic virology and serology laboratory</a></li>
-</ul>
-<p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=consultation&amp;count=10">Source query from Search API</a></p>
-
+      </div>
 
             
           </main>
